# legal-decision-rag

./: LICENSE  README.md  main.py  pyproject.toml
data/interim/: semantic_chunks.pkl
notebooks/: create_vector_store.ipynb  running_rag.ipynb
src/embeddings/: embedding_model.py
src/ingestion/: chunking.py  pdf_loader.py
src/llm/: model.py
src/prompts/: legal_prompt.py
src/rerankers/: cross_reranker.py
src/retrivers/: bm5_retriver.py  hybrid_retriver.py  vector_retriver.py
src/scripts/: build_index.py
src/vector_store/: faiss_store.py
vector_store/: index.faiss  index.pkl
