[project]
name = "legal-decision-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "jupyter>=1.1.1",
    "jupyter-core>=5.9.1",
    "jupyterlab>=4.5.6",
    "lab>=8.9",
    "langchain>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "marimo>=0.20.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pymupdf>=1.27.2",
    "pyzmq>=27.1.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
]
